# snapshot

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  snapshot.yml
src/snapshot/: api.py  compress.py  edition.py  main.py  namespace.py  parsoid.py  redirect.py  zim.py
