[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snapshot"
version = "0.1.0"
authors = [{ name = "xxyzz" }]
description = "Parsoid snapshot chunks"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
snap = "snapshot.main:main"

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle warning
]
